# rayland

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/rayland/: Cargo.toml  README.md
crates/rayland-c/: Cargo.toml
crates/rayland-c/src/: blob_sync.rs  lib.rs  link.rs  main.rs  metrics.rs  relay_engine.rs  ring.rs  shm.rs
crates/rayland-c/tests/: no_gpu_linkage.rs  ring_watch.rs
crates/rayland-client/: Cargo.toml
crates/rayland-client/src/: lib.rs  main.rs
crates/rayland-engine/: Cargo.toml  build.rs
crates/rayland-engine/examples/: vtest_serve.rs
crates/rayland-engine/src/: actor.rs  error.rs  ffi.rs  lib.rs  transport.rs  virgl.rs  vtest.rs
crates/rayland-engine/src/venus_ring/: captured.rs  dump.rs  mod.rs
crates/rayland-engine/tests/: guest_blob.rs  icosa_cpu_venus_e2e.rs  icosa_gpu_venus_e2e.rs  live_socket.rs  refapp_venus_e2e.rs  reliability.rs
crates/rayland-icosa-core/: Cargo.toml
crates/rayland-icosa-core/src/: exact_math.rs  fractal.rs  geometry.rs  lib.rs  schedule.rs
crates/rayland-icosa-core/tests/: log2_table.rs  sin_cos_table.rs
crates/rayland-icosa-cpu/: Cargo.toml
crates/rayland-icosa-cpu/src/: main.rs  texture.rs
crates/rayland-icosa-cpu/tests/: native_render.rs
crates/rayland-icosa-gpu/: Cargo.toml
crates/rayland-icosa-gpu/src/: main.rs
crates/rayland-icosa-gpu/tests/: native_render.rs
crates/rayland-icosa-vk/: Cargo.toml
crates/rayland-icosa-vk/src/: context.rs  lib.rs  mapped.rs  pipeline.rs  scene.rs  targets.rs
crates/rayland-icosa-vk/tests/: renders_the_solid.rs
crates/rayland-icosa-window/: Cargo.toml
crates/rayland-icosa-window/src/: main.rs
crates/rayland-present/: Cargo.toml
crates/rayland-present/src/: frame.rs  lib.rs  window.rs
crates/rayland-present/tests/: live_window.rs
crates/rayland-refapp/: Cargo.toml
crates/rayland-refapp/src/: context.rs  main.rs  pipeline.rs  render.rs
crates/rayland-refapp/tests/: native_render.rs
crates/rayland-relay/: Cargo.toml
crates/rayland-relay/src/: frame.rs  lib.rs  message.rs  trace.rs
crates/rayland-s/: Cargo.toml
crates/rayland-s/src/: apply.rs  blob.rs  delivery.rs  lib.rs  main.rs  present.rs  ring_mirror.rs
crates/rayland-s/tests/: apply.rs  loopback_e2e.rs  present.rs
crates/rayland-server/: Cargo.toml
crates/rayland-server/src/: dmabuf.rs  lib.rs  main.rs  render.rs  window.rs
crates/rayland-server/tests/: e2e.rs  handle.rs  quic_e2e.rs  render.rs
crates/rayland-transport/: Cargo.toml
crates/rayland-transport/src/: lib.rs  sync_stream.rs  tls.rs
crates/rayland-vtest/: Cargo.toml
crates/rayland-vtest/src/: error.rs  lib.rs  transport.rs  vtest.rs
crates/rayland-vtest/src/venus_ring/: captured.rs  decode.rs  doorbell.rs  dump.rs  identity.rs  mod.rs  out_of_line.rs
crates/rayland-vtest/tests/: no_gpu_linkage.rs
crates/rayland-wire/: Cargo.toml
crates/rayland-wire/src/: frame.rs  lib.rs  message.rs
crates/rayland/src/: lib.rs
docs/: DIARY.md  c0-venus-first-light.md  c1-the-network.md  icosa-baseline-dop561.txt  icosa-fixtures.md  sp0-first-light.md  sp1-onto-the-screen.md  sp2-real-transport.md  sp3-zero-copy-presentation.md
docs/data/: c1-sweep-2026-07-17.csv
docs/design/: 2026-07-13-native-remote-wayland-gpu.md  2026-07-13-sp0-first-light.md  2026-07-14-c0-venus-first-light.md  2026-07-14-sp1-onto-the-screen.md  2026-07-14-sp2-real-transport.md  2026-07-14-sp3-zero-copy-presentation.md  2026-07-15-c1-the-network.md  2026-07-15-venus-ring-findings.md  2026-07-16-icosa-fixtures.md  2026-07-17-fence-feedback-walking-skeleton.md  2026-07-17-return-path-completion.md  2026-07-18-c2-engine-actor.md  2026-07-18-c2-readback-reachability.md  2026-07-19-c2-readback-completion-gate-plan.md  2026-07-19-c2-readback-completion-gate.md  2026-07-19-c2-ringidx-decode.md  2026-07-19-c2-true-remote-mapped-sync.md  2026-07-20-c2-fence-empty-submit-finding.md  2026-07-20-c2-handoff.md  2026-07-20-c2-next-session-prompt.md  2026-07-20-c2-readback-release-ordering-plan.md  2026-07-20-c2-readback-release-ordering.md  2026-07-21-c2-getfencestatus-completion.md  2026-07-21-c2-readback-coalescing.md  2026-07-21-c2-waitdrain-completion-plan.md  2026-07-21-c2-waitdrain-completion.md
docs/superpowers/plans/: 2026-07-13-sp0-first-light.md  2026-07-14-c0-venus-first-light.md  2026-07-14-sp1-onto-the-screen.md  2026-07-14-sp2-real-transport.md  2026-07-14-sp3-zero-copy-presentation.md  2026-07-15-c1-the-network.md  2026-07-16-icosa-fixtures.md  2026-07-17-fence-feedback-walking-skeleton.md  2026-07-18-c2-engine-actor.md
scripts/: c1-sweep.sh  c1-trace-analyze.py  c1-two-machine.sh  c2-icosa-two-machine.sh
shaders/: README.md  icosa.vert  icosa.vert.spv  icosa_flat.frag  icosa_flat.frag.spv  icosa_fractal.frag  icosa_fractal.frag.spv  icosa_textured.frag  icosa_textured.frag.spv  triangle.frag  triangle.vert
