# Rayland workspace root.
#
# This is a *virtual* manifest: it has no [package] of its own, only a list of
# member crates. The published name-holder crate now lives at crates/rayland.
[workspace]
resolver = "3"                       # resolver 3 is the default for edition 2024; stated explicitly for clarity
members = [
    "crates/rayland",                # the published placeholder / future facade
    "crates/rayland-wire",           # shared wire protocol (this task)
    "crates/rayland-server",         # off-screen Vulkan renderer (this task)
    # rayland-client is added by its own task
]

# Dependency versions shared across member crates, so every crate agrees on one version.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }   # (de)serialization derives for wire types
postcard = { version = "1", features = ["use-std"] }  # compact, deterministic, pure-Rust wire format
thiserror = "2"                      # precise error enums for library crates
anyhow = "1"                         # ergonomic top-level errors for binary crates
ash = "0.38"                         # thin Vulkan bindings (used by the server)
image = "0.25"                       # PNG encoding (used by the server)
