# Rayland workspace root.
#
# This is a *virtual* manifest: it has no [package] of its own, only a list of
# member crates. The published name-holder crate now lives at crates/rayland.
[workspace]
resolver = "3"                       # resolver 3 is the default for edition 2024; stated explicitly for clarity
members = [
    "crates/rayland",                # the published placeholder / future facade
    "crates/rayland-wire",           # shared wire protocol (this task)
    "crates/rayland-server",         # off-screen Vulkan renderer (this task)
    "crates/rayland-client",         # client: builds and sends the triangle stream (this task)
    "crates/rayland-transport",      # QUIC transport foundation + loopback spike (SP2 Task 1)
    "crates/rayland-engine",         # S-side render engine: FFI-embedded libvirglrenderer + Venus context (C0 Task 1)
]

# Dependency versions shared across member crates, so every crate agrees on one version.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }   # (de)serialization derives for wire types
postcard = { version = "1", features = ["use-std"] }  # compact, deterministic, pure-Rust wire format
thiserror = "2"                      # precise error enums for library crates
anyhow = "1"                         # ergonomic top-level errors for binary crates
ash = "0.38"                         # thin Vulkan bindings (used by the server)
image = "0.25"                       # PNG encoding (used by the server)
# Wayland client toolkit: xdg-shell + wl_shm + calloop (reexported). default-features = false
# drops SCTK's default `xkbcommon` feature, which would link system libxkbcommon via
# pkg-config at build time — we do no keyboard/seat handling, so we need only `calloop`.
smithay-client-toolkit = { version = "0.20", default-features = false, features = ["calloop"] }
wayland-client = { version = "0.31", features = ["dlopen"] }  # dlopen: load libwayland at runtime so CI needs no libwayland package
# Generated Rust bindings for the official Wayland protocol extensions. SCTK already pulls
# this in transitively for xdg-shell; declared directly here (SP3 Task 4) so `window.rs` can
# name `zwp_linux_dmabuf_v1` types itself, which SCTK 0.20 has no first-class helper for.
# `staging`/`unstable` are enabled for completeness even though `linux-dmabuf-v1` itself lives
# under the crate's "stable" category and needs neither feature to compile.
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
quinn = "0.11"                                          # QUIC transport (async)
# TLS; `ring` provider selected explicitly. SP2 Task 1 spike: the pure-Rust
# `rustls-rustcrypto` provider (0.0.2-alpha) panics "no initial cipher suite found" when
# quinn wraps it for QUIC packet protection — it does not yet expose a QUIC-usable AEAD
# suite. `ring` is the working fallback documented in the SP2 plan's decision gate; see
# crates/rayland-transport/src/tls.rs for the full note and .superpowers/sdd/task-1-report.md
# for the spike evidence. `rustls-rustcrypto` was dropped as a dependency since it is unused;
# revisit when the crate matures past alpha (rv64 portability was the original motivation).
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen = "0.14"                                          # self-signed certificate generation
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] } # confined async runtime
